--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,4 +478,11 @@ pre code { font-size: 15px !important; }
 
 p code { font-size: 19px; }
 
+/* Style for the 3 social icons in the About Me Page. */
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column { float: left; width: 5%; padding: 5px; }
+
+/* Clear floats after image containers */
+.row::after { content: ""; clear: both; display: table; }
+
 /*# sourceMappingURL=style.css.map */
